# TemperatureMonitoring

./: README.md
arduino/: sonde_temperature.ino
data_processing/: sonde.cabal  stack.yaml
data_processing/app/: Const.hs  Main.hs
data_processing/data/: create_db.sql  sqlite3
